Fixes wrong duplication of slides on auto play mode. Adjusts alignment of arrows when no title or name is displayed on carousels.

--- a/src/assets/css/tainacan-gutenberg-block-carousel-collections-list.css
+++ b/src/assets/css/tainacan-gutenberg-block-carousel-collections-list.css
@@ -327,14 +327,14 @@
     .wp-block-tainacan-carousel-collections-list .tainacan-carousel.has-arrows-left .swiper-button-next {
       left: 10px;
       right: auto;
-      top: calc(50% + 36px); }
+      top: calc(50% + 12px) !important; }
     .wp-block-tainacan-carousel-collections-list .collections-list-edit-container.has-arrows-right .swiper-button-prev,
     .wp-block-tainacan-carousel-collections-list .tainacan-carousel.has-arrows-right .swiper-button-prev {
       right: 10px;
       left: auto; }
     .wp-block-tainacan-carousel-collections-list .collections-list-edit-container.has-arrows-right .swiper-button-next,
     .wp-block-tainacan-carousel-collections-list .tainacan-carousel.has-arrows-right .swiper-button-next {
-      top: calc(50% + 36px); }
+      top: calc(50% + 12px) !important; }
   .wp-block-tainacan-carousel-collections-list ul.collections-list-edit {
     display: flex;
     align-items: flex-start;
