--- a/src/gutenberg-blocks/tainacan-collections/carousel-collections-list/carousel-collections-list.scss
+++ b/src/gutenberg-blocks/tainacan-collections/carousel-collections-list/carousel-collections-list.scss
@@ -223,14 +223,14 @@
         &.has-arrows-left .swiper-button-next {
             left: 10px;
             right: auto;
-            top: calc(50% + 36px);
+            top: calc(50% + 12px)  !important;
         }
         &.has-arrows-right .swiper-button-prev {
             right: 10px;
             left: auto;
         }
         &.has-arrows-right .swiper-button-next {
-            top: 50%;
+            top: calc(50% + 12px)  !important;
         }
     }
     ul.collections-list-edit {
